fixing hero not showing

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .jumbotron {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/img/hero.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/hero.png');
     background-repeat: no-repeat;
     background-position: center;
     color: white;
